SFDC Automation/src/objects/RSM_Equipment_Requisition__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>RSM_Equipment_Requisition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Ryder_Branch__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Ryder_Branch__r.Country_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Requisition_Order_Amount__c</fullName>
        <label>Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment_Requisition_Order_No__c</fullName>
        <label>Order No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Equipment_Requisition_Order_Start_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RSM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract No.</label>
        <referenceTo>RSM_Contract__c</referenceTo>
        <relationshipLabel>RSM_Equipment_Requisition</relationshipLabel>
        <relationshipName>RSM_Equipment_Requisition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ryder_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ryder Branch</label>
        <referenceTo>Ryder_Branch__c</referenceTo>
        <relationshipName>RSM_Equipment_Requisition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <formula>Ryder_Branch__r.State_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Ryder_Branch__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <formula>Ryder_Branch__r.Street_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Ryder_Branch__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Equipment Requisition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RSM_Equipment_Requisition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>